tests/integration/features/sdoc/document_grammar/type_system/tag/validation/02_tag_cannot_be_multiline/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: A tag field must not be multiline: TAG_FIELD.
CHECK: Location: {{.*}}input.sdoc:15:1
CHECK: Hint: Node fields: [TAG_FIELD], grammar fields: [TAG_FIELD, STATEMENT].
